Added class and changed names of some files

--- a/Sudoku/Sudoku.vcxproj
+++ b/Sudoku/Sudoku.vcxproj
@@ -139,11 +139,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Complexity.cpp" />
     <ClCompile Include="CreateSudoku.cpp" />
-    <ClCompile Include="Source.cpp" />
+    <ClCompile Include="PrintingSudoku.cpp" />
+    <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="CreateSudoku.h" />
+    <ClInclude Include="header.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
