--- a/Sudoku/Sudoku.vcxproj.filters
+++ b/Sudoku/Sudoku.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Main.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Game.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header.h">
