--- a/Sudoku/Sudoku.vcxproj.filters
+++ b/Sudoku/Sudoku.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Game.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Solving.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header.h">
