--- a/Sudoku/Sudoku.vcxproj
+++ b/Sudoku/Sudoku.vcxproj
@@ -144,6 +144,7 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="PrintingSudoku.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Solving.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header.h" />
